--- a/first-time/index-js-pos.html
+++ b/first-time/index-js-pos.html
@@ -4,6 +4,10 @@
 		<meta charset="UTF-8">
 		<title>hello Script declaration</title>
 		<!--1. <script></script>-->
+		<!-- privious HTML Version -->
+		<style type="text/css"></style>
+		<!-- HTML5 -->
+		<style></style>
 	</head>
 	<body>
 		<!--2. <script></script>-->
@@ -12,6 +16,17 @@
 			3. <script></script>
 			real code
 		-->
-		<!--4. <script></script>-->
+		<!--4. <script></script> 추천-->
+		<!-- 
+			브라우저 로딩
+			상 - 하단
+			script || iframe
+			// 다른 거 로딩 중단 -> script , iframe
+		-->
+		<!-- XHTML // HTML5 아닌것들 -->
+		<script type="text/javascript" language="javascript"></script>
+		<!-- application/javascript -->
+		<!-- text/ecmascript -->
+		<!-- IE6 미만 type인식 x language인식 o --> 
 	</body>
 </html>
