--- a/first-time/index-js-type.html
+++ b/first-time/index-js-type.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 	<head>
 		<meta charset="UTF-8">
-		<title>hello scope</title>
+		<title>hello type</title>
 	</head>
 	<body>
 		<script>
@@ -10,11 +10,11 @@
 			// var keyword = value {key:value}
 			// window.keyword = value {key:value};	
 			// global object window === global variable window
-			var x = 10; 
+			var x = 10;
 			// type === Number
 			// same as var x = new Number(10);
 			// check constructor
-			var y = "xy";
+			var y = "10";
 			// type === String
 			// same as var y = new String("xy");
 			// check consructor
@@ -29,31 +29,57 @@
 			// same undefined.
 			// but don't use memory.
 			var obj = {};
-			// type = Object
+			// type === Object
 			// same as var obj = new Object();
 			// but use short case;
 			var arr = [];
 			// type === Object
 			// same as var arr = new Array();
 			// but use short case;
+			// test : b = x + y;
+			// string + number
+			var arr = [];
+			// var arr = ["a",b,10];
+			// arr[0]; // "a"
+			// arr[1]; // b (변수)(true)
+			// arr[2]; // 10
 			
 			// test function
 			var assert = function() {
+				// arguments === parametor array
+				// arguments = [x,y,b,obj,arr];
 				var length = arguments.length, 
 				testNode, i;
 				if(arguments.length > 0) {
-					for(i=0;i<length;i++) {
+					// for문
+					// i = 0;
+					// length = 5;
+					// i = 1; length = 5
+					// i = 2; length = 5
+					// i = 3;
+					// i = 4;
+					// i = 5;
+					for(/*0번쨰*/i=0;/*1번째*/i<length;/*3번째*/i++) {
+						/*2번째*/
 						testNode = arguments[i].constructor ? arguments[i].constructor : arguments[i].prototype.constructor;
+						// varible value = (if) ? true : false
+						// if(arguments[i].constructor) { 
+						// 	testNode = arguments[i].constructor
+						// } else {
+						// 	testNode = arguments[i].prototype.constructor
+						// }
 						console.log(typeof(arguments[i]));
 						console.log(arguments[i]);
 						console.log(testNode);
 					}
+					console.log("for end");
+					// for문이 끝났을 때 이쪽에 코드 동작
 				} else {
 					console.log("error! enter the type check target!");
 				}
 			};
 			assert(x,y,b,obj,arr);
-
+			assert();
 		</script>
 	</body>
 </html>
