--- a/first-time/index.html
+++ b/first-time/index.html
@@ -7,12 +7,20 @@
 	<body>
 		<h1>Front End Study JavaScript First Time</h1>
 		<ol>
-			<li><a href="index-js-pos.html">JavaScript Position Check</a></li>
+			<li><a href="index-js-pos.html">JavaScript Positioning</a></li>
 			<li><a href="index-js-type.html">JavaScript Type &amp; variable check</a></li>
 			<li><a href="index-js-dom.html">JavaScript DOM</a></li>
 			<li><a href="index-js-event.html">Event Add</a></li>
 			<li><a href="index-js-scope.html">JavaScript Scope</a></li>
 			<li><a href="index-js-this.html">Scope This</a></li>
+		</ol>
+		<h1>Front End Study JavaScript Second Time</h1>
+		<ol>
+			<li><a href="#">Prototype</a></li>
+			<li><a href="#">Object Chain</a></li>
+			<li><a href="#">Prototype Chain</a></li>
+			<li><a href="#">Object Oriented Programming Example : Layer Popup</a></li>
+			<li><a href="#">Lib(library) Default</a></li>
 		</ol>
 	</body>
 </html>
