--- a/first-time/index-js-event.html
+++ b/first-time/index-js-event.html
@@ -15,10 +15,15 @@
 				// real code
 				// alert(this);
 			}
-
+			hell.onclick = function() {
+				// code
+			}
+			window.onload = function() {};
+			window.onload = function() {}
 			// addEventListener
 			// for event add
 
+			hell.addEventListener("click", function() { }, false);
 			hell.addEventListener("click", function() { }, false);
 			// setEventListener (event, function, event order);
 			// but fxxxing IE Can't use addEventListener
