--- a/first-time/index-js-type.html
+++ b/first-time/index-js-type.html
@@ -26,6 +26,7 @@
 			// type === undefined;
 			// does not have constructor
 			var n = null;
+			// type === Object
 			// same undefined.
 			// but don't use memory.
 			var obj = {};
@@ -43,7 +44,6 @@
 			// arr[0]; // "a"
 			// arr[1]; // b (변수)(true)
 			// arr[2]; // 10
-			
 			// test function
 			var assert = function() {
 				// arguments === parametor array
@@ -51,23 +51,9 @@
 				var length = arguments.length, 
 				testNode, i;
 				if(arguments.length > 0) {
-					// for문
-					// i = 0;
-					// length = 5;
-					// i = 1; length = 5
-					// i = 2; length = 5
-					// i = 3;
-					// i = 4;
-					// i = 5;
-					for(/*0번쨰*/i=0;/*1번째*/i<length;/*3번째*/i++) {
+					for(i=0;i<length;i++) {
 						/*2번째*/
 						testNode = arguments[i].constructor ? arguments[i].constructor : arguments[i].prototype.constructor;
-						// varible value = (if) ? true : false
-						// if(arguments[i].constructor) { 
-						// 	testNode = arguments[i].constructor
-						// } else {
-						// 	testNode = arguments[i].prototype.constructor
-						// }
 						console.log(typeof(arguments[i]));
 						console.log(arguments[i]);
 						console.log(testNode);
@@ -78,7 +64,7 @@
 					console.log("error! enter the type check target!");
 				}
 			};
-			assert(x,y,b,obj,arr);
+			assert(x,y,b,obj,arr,x,y,b);
 			assert();
 		</script>
 	</body>
